# streamcable

./: .gitignore  README.md  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: ci.yml  rust.yml  typescript.yml
rust/: Cargo.toml  GITHUB_ACTIONS_AND_MULTIPLEXING.md  IMPLEMENTATION_SUMMARY.md  README.md  STREAMING_TYPES.md
rust/examples/: basic.rs  multiplexing.rs  streaming_types.rs
rust/src/: data_types.rs  deserialize.rs  error.rs  lib.rs  read_context.rs  rolling_uint.rs  schema.rs  serialize.rs  stream_multiplexer.rs
rust/tests/: integration_tests.rs
src/: FlatPromiseStream.ts  ReadContext.ts  deserialize.ts  index.ts  reflection.ts  schemas.ts  serialize.ts  utils.ts
src/__tests__/: basic-schemas.test.ts  complex-schemas.test.ts  integration.test.ts  streaming-schemas.test.ts  utilities.test.ts
