[package]
name = "streamcable"
version = "0.0.2"
edition = "2021"
authors = ["Astrid Gealer"]
description = "A binary serialization format for objects optimized for streaming"
license = "MIT"
repository = "https://github.com/IAmJSD/streamcable"

[dependencies]
tokio = { version = "1", features = ["io-util", "sync", "rt"] }
tokio-stream = "0.1"
bytes = "1"
futures = "0.3"
async-stream = "0.3"

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
